examples/python/helloworld/test_nginx_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-nginx
  labels:
    app: test-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-nginx
  template:
    metadata:
      labels:
        app: test-nginx
    spec:
      containers:
        - name: test-nginx
          image: nginx
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: test-nginx-service
spec:
  selector:
    app: test-nginx
  ports:
    - protocol: TCP
      port: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-nginx-ingress
spec:
  rules:
  - host: test-nginx.apollo2.dmz.sslmda.net
    http:
      paths:
      - backend:
          serviceName: test-nginx-service
          servicePort: 80
